Crud Breed & SubBreed

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -22,6 +22,9 @@
     "breed": "Breed",
     "subBreed": "Sub-Breed",
 
+    "pond": "Pond",
+    "pond": "Pond",
+
     "app": "Home",
     "piaf": "Piaf",
     "dashboards": "Dashboards",
