Koi parasite overview

--- a/ui/src/locales/en.json
+++ b/ui/src/locales/en.json
@@ -23,7 +23,9 @@
     "subBreed": "Sub-Breed",
 
     "pond": "Pond",
-    "pond": "Pond",
+    "parasite": "Parasite",
+
+    "koi": "Koi",
 
     "app": "Home",
     "piaf": "Piaf",
